# os-labs

./: .gitignore  readme.md
first_lab/linux/demo_project/: main.cpp
first_lab/linux/number/: number.cpp  number.h
first_lab/linux/vector/: vector.cpp  vector.h
first_lab/windows/demo_project/: demo_project.sln
first_lab/windows/demo_project/demo_project/: demo_project.cpp  demo_project.vcxproj  number.lib  vector.lib
first_lab/windows/number/number/: number.cpp  number.h  number.vcxproj.filters
first_lab/windows/nums/: nums.sln
first_lab/windows/nums/nums/: Number.cpp  nums.cpp  nums.vcxproj  nums.vcxproj.filters
first_lab/windows/vector/: vector.sln
first_lab/windows/vector/vector/: Vector.cpp  Vector.h  vector.cpp  vector.h  vector.vcxproj
lab-3/buffered_channel/: CMakeLists.txt  buffered_channel.h  main.cpp
lab-4/matrix_multiplying_using_channel/: CMakeLists.txt  buffered_channel.h  main.cpp  matrix.h  matrix_utils.cpp  matrix_utils.h  queue_s.h  vector_wrapper.h
lab-4/matrix_multiplying_using_channel/testing/: MatrixTester.cpp  MatrixTester.h  Timer.h
lab-5/: CMakeLists.txt  main.cpp  matrix.h  matrix_utils.h
lab-5/testing/: Timer.cpp
lab-5/threads/: LinuxThread.h  Thread.h  WinThread.h
lab-6/killer/: CMakeLists.txt  main.cpp
lab-6/linux/killer/: main.cpp
lab-6/linux/user/: CMakeLists.txt  main.cpp
lab-6/user/: CMakeLists.txt  main.cpp
lab-6/windows/killer/: main.cpp
lab-6/windows/user/: Killer.cpp  Killer.h  main.cpp
lab-7/linux/: CMakeLists.txt  a.cpp  m.cpp  main.cpp  p.cpp  s.cpp
lab-7/windows/: CMakeLists.txt  for_each_in_input.cpp  for_each_in_input.h
lab-7/windows/A/: CMakeLists.txt  main.cpp
lab-7/windows/M/: CMakeLists.txt  main.cpp
lab-7/windows/P/: CMakeLists.txt  main.cpp
lab-7/windows/S/: CMakeLists.txt  main.cpp
lab-7/windows/main/: CMakeLists.txt  main.cpp
linux/: build.sh
linux/demo_project/: CMakeLists.txt
linux/number/: CMakeLists.txt  number.cpp
linux/vector/: CMakeLists.txt  vector.cpp
thread/: CMakeLists.txt  Matrix_old.h  defines.h  main.cpp  matrix.h  matrix_utils.cpp  matrix_utils.h  number_matrix.h  vector_wrapper.h
thread/testing/: MatrixTester.cpp  MatrixTester.h
windows/demo_project/: demo_project.sln
windows/demo_project/demo_project/: demo_project.vcxproj  demo_project.vcxproj.filters
windows/number/: number.sln
windows/number/number/: number.h  number.vcxproj
windows/vector/: vector.sln
windows/vector/vector/: vector.vcxproj
